# STUNIR

./: .abacus.donotdelete  .coverage  .coverage.chatllm-computer-8f3859241-656f74975b-xpncj.pid3622.Xd5unkvx  .coveragerc  .git-cliff.toml  .gitignore  .pre-commit-config.yaml  .stunir_progress.json  AI_START_HERE.md  CHANGELOG.md  COMPETITIVE_ANALYSIS.md  CONFLUENCE_PROGRESS_REPORT.md  CONTRIBUTING.md  ENTRYPOINT.md  GITHUB_PUSH_SUCCESS_REPORT.md  PATH_TO_V1.md  PHASE_3D_COMPLETION_REPORT.md  PHASE_3D_STATUS_REPORT.md  POWERTOOLS_STATUS.md  README.md  RELEASE_NOTES.md  SPARK_INVESTIGATION_PUSH_STATUS.md  STUNIR_ANTI_PATTERNS.md  STUNIR_ARCHITECTURE.mermaid  STUNIR_CHUNK_INDEX.jsonl  STUNIR_COMPLETION_SUMMARY.md  STUNIR_FIX_PLAN.md  STUNIR_INDEX_README.md  STUNIR_QUICKSTART_PRODUCTION.md  STUNIR_REFERENCE_AUDIT.json  STUNIR_REFERENCE_AUDIT.md  STUNIR_REFERENCE_RULES.md  STUNIR_REPO_INDEX.json  V0.7.1_COMPLETION_REPORT.md  V0.8.0_COMPLETION_REPORT.md  VERSIONING_STRATEGY.md  VERSION_ROLLBACK_EXPLANATION.md  VERSION_STATUS.md  WEEK10_PUSH_STATUS.md  WEEK1_COMPLETE_REPORT.md  (+80 more)
.cargo/: config.toml
docs/archive/native_legacy/native_tools/haskell/: stunir-native.cabal
docs/archive/native_legacy/native_tools/haskell/src/: Main.hs  StunirPack.hs
docs/archive/native_legacy/native_tools/haskell/stunir-native/: index.machine.json
docs/archive/native_legacy/native_tools/haskell/test_vectors/: manifest.machine.json  spec_0001.json
targets/haskell/: stunir-emitters.cabal
targets/haskell/src/STUNIR/Emitters/: AsmIr.hs  Asp.hs  FPGA.hs  Lexer.hs  Lisp.hs  Mobile.hs  Planning.hs  Prolog.hs
tests/haskell_test/: PYTHON_TEST_MAPPING.md  README.md  Setup.hs  TEST_COVERAGE_REPORT.md  stunir-conformance-tests.cabal
tests/haskell_test/ci/: run_tests.sh
tests/haskell_test/src/Test/: Harness.hs
tests/haskell_test/tests/: ContractsVectorTest.hs  HashDeterminismTest.hs  ManifestGenTest.hs  PerformanceTest.hs  PipelineIntegrationTest.hs  PolyglotVectorTest.hs  ProvenanceTest.hs  SchemaValidationTest.hs  TargetGenTest.hs
tools/haskell/: create_specialized_emitters.sh  stunir-semantic-ir.cabal  stunir-tools.cabal
tools/haskell/ir_canonicalizer/: StunirIR.hs  index.machine.json  stunir-ir.cabal
tools/haskell/ir_canonicalizer/test_vectors/: manifest.machine.json
tools/haskell/pack_attestation/: index.machine.json  manifest.machine.json
tools/haskell/src/: IRToCode.hs  SpecToIR.hs
tools/haskell/src/STUNIR/: Emitter.hs  Hash.hs  IR.hs  Types.hs
tools/haskell/src/STUNIR/SemanticIR/: Declarations.hs  Emitters.hs  Expressions.hs  Modules.hs  Nodes.hs  Statements.hs  Types.hs  Validation.hs
tools/haskell/src/STUNIR/SemanticIR/Emitters/: Base.hs  CodeGen.hs  Types.hs  Visitor.hs
tools/haskell/targets/haskell/: stunir-emitters.cabal
tools/haskell/test/: Main.hs
tools/haskell/test/STUNIR/SemanticIR/Emitters/: BaseSpec.hs  CoreSpec.hs  LanguageFamiliesSpec.hs  SpecializedSpec.hs
tools/native/haskell/: StunirNative.hs  cabal.project  index.machine.json  manifest.machine.json  stunir-haskell.cabal  stunir-native.cabal
tools/native/haskell/src/: StunirPipeline.hs  index.machine.json  manifest.machine.json
tools/native/haskell/src/Commands/: GenProvenance.hs  SpecToIr.hs
tools/native/haskell/src/IR/: manifest.machine.json
tools/native/haskell/stunir-native/: index.machine.json  manifest.machine.json  stunir-native.cabal
tools/native/haskell/stunir-native/app/: Main.hs  index.machine.json  manifest.machine.json
tools/native/haskell/stunir-native/src/: Main.hs  index.machine.json  manifest.machine.json
tools/native/haskell/stunir-native/src/STUNIR/: Canonical.hs  CheckToolchain.hs  GenProvenance.hs  Hash.hs  JCS.hs  PathPolicy.hs  Spec.hs  SpecToIr.hs  Validate.hs  index.machine.json  manifest.machine.json
tools/native/haskell/stunir-native/src/Stunir/: Canonical.hs  Import.hs  Manifest.hs  Provenance.hs  Receipt.hs  Spec.hs
tools/native/haskell/test_vectors/: expected_ir.sha256  index.machine.json  manifest.machine.json
tools/native/rust/stunir-native/: Cargo.toml  TESTING.md  deny.toml  index.machine.json  manifest.machine.json  real_ir.json  real_spec.json
tools/native/rust/stunir-native/benches/: canonical_bench.rs
tools/native/rust/stunir-native/src/: canonical.rs  check_toolchain.rs  crypto.rs  emit.rs  errors.rs  gen_provenance.rs  hash.rs  import.rs  index.machine.json  ir.rs  ir_v1.rs  jcs.rs  lib.rs  main.rs  manifest.machine.json  path_policy.rs  provenance.rs  receipt.rs  spec.rs  spec_to_ir.rs  toolchain.rs  validate.rs  verify_emit.rs  verify_pack.rs
tools/native/rust/stunir-native/src/commands/: mod.rs  verify.rs
tools/native/rust/stunir-native/src/emit/: index.machine.json  manifest.machine.json  python.rs
tools/native/rust/stunir-native/test_specs/: 1.json
tools/native/rust/stunir-native/tests/: crypto_test.rs  integration_test.rs  property_test.rs
tools/native/rust/stunir-native/tests/common/: mod.rs
tools/pack_attestation/: Attestation.hs  generate_root.sh  index.machine.json  manifest.machine.json  pack-attestation.cabal
tools/rust/: Cargo.toml
tools/rust/semantic_ir/: Cargo.toml
tools/rust/semantic_ir/emitters/: Cargo.toml  generate_rust_emitters.py
tools/rust/semantic_ir/emitters/benches/: emitter_benchmarks.rs
tools/rust/semantic_ir/emitters/src/: base.rs  codegen.rs  core.rs  language_families.rs  lib.rs  specialized.rs  types.rs  visitor.rs
tools/rust/semantic_ir/emitters/tests/: test_core.rs  test_language_families.rs  test_specialized.rs
tools/rust/semantic_ir/src/: expressions.rs  lib.rs  modules.rs  nodes.rs  statements.rs  types.rs
tools/rust/src/: declarations.rs  hash.rs  ir.rs  ir_to_code.rs  lib.rs  optimizer.rs  spec_to_ir.rs  types.rs  validation.rs
tools/rust/targets/rust/bytecode/: mod.rs
tools/rust/targets/rust/constraints/: mod.rs
tools/rust/targets/rust/expert_systems/: mod.rs
tools/rust/targets/rust/fpga/: mod.rs
tools/rust/targets/rust/lisp/: janet.rs  scheme.rs
tools/rust/targets/rust/planning/: mod.rs
tools/rust/targets/rust/systems/: mod.rs
tools/rust/tests/: integration_tests.rs
(+4345 files in other folders)
