[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stunir"
version = "0.6.1"
description = "STUNIR - Deterministic IR Generation and Verification Toolkit"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "STUNIR Team"}
]
keywords = ["ir", "determinism", "verification", "compiler"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Compilers",
]

dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "pytest-timeout>=2.2",
    "pytest-snapshot>=0.9",
    "black>=24.0",
    "ruff>=0.1.0",
    "mypy>=1.8",
    "isort>=5.13",
    "pylint>=3.0",
    "bandit>=1.7",
    "safety>=2.3",
    "pre-commit>=3.6",
    "types-PyYAML>=6.0",
    "types-toml>=0.10",
]
testing = [
    "hypothesis>=6.92",
    "mutmut>=2.4",
    "locust>=2.20",
    "pytest-snapshot>=0.9",
    "pytest-timeout>=2.2",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",
]
all = [
    "toml>=0.10",
]

[project.urls]
Homepage = "https://github.com/stunir/stunir"
Documentation = "https://stunir.readthedocs.io"
Repository = "https://github.com/stunir/stunir"
Changelog = "https://github.com/stunir/stunir/blob/main/CHANGELOG.md"

[project.scripts]
stunir = "tools.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tools*", "manifests*", "targets*", "spec*"]

# =============================================================================
# Testing Configuration
# =============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--cov=tools",
    "--cov=manifests",
    "--cov=targets",
    "--cov-report=term-missing",
    "--cov-report=html:coverage_html_report",
    "--cov-report=xml:coverage.xml",
    "--cov-fail-under=80",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "determinism: marks tests that verify deterministic behavior",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# =============================================================================
# Code Formatting Configuration
# =============================================================================

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | __pycache__
  | \.eggs
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
skip = [".git", "__pycache__", ".tox", "venv", ".venv", "build", "dist"]
known_first_party = ["tools", "manifests", "targets", "spec"]
known_third_party = ["pytest", "yaml", "toml"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

# =============================================================================
# Linting Configuration
# =============================================================================

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = [
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "venv",
    "_build",
    "buck-out",
    "build",
    "dist",
    "__pycache__",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "D",      # pydocstyle (docstrings)
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "TID",    # flake8-tidy-imports
    "RUF",    # Ruff-specific rules
    "S",      # flake8-bandit (security)
    "PTH",    # flake8-use-pathlib
    "PL",     # Pylint
    "PERF",   # Perflint
]
ignore = [
    "E501",   # line too long (handled by black)
    "D100",   # missing module docstring
    "D104",   # missing package docstring
    "D203",   # 1 blank line before class docstring (conflicts with D211)
    "D213",   # multi-line docstring summary on second line (conflicts with D212)
    "S101",   # assert used (we use it intentionally)
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
]
unfixable = ["F401"]  # Don't autofix unused imports

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "D", "PLR2004"]
"**/test_*.py" = ["S101", "D", "PLR2004"]
"setup.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["tools", "manifests", "targets", "spec"]

[tool.pylint.main]
py-version = "3.9"
jobs = 0
load-plugins = [
    "pylint.extensions.docparams",
    "pylint.extensions.docstyle",
]
ignore = ["tests", ".git", "__pycache__", "build", "dist", "venv"]
ignore-patterns = ["test_.*\\.py"]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.messages_control]
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "W0511",  # fixme/todo
]

[tool.pylint.design]
max-args = 10
max-locals = 20
max-returns = 6
max-branches = 12

# =============================================================================
# Type Checking Configuration
# =============================================================================

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
strict_concatenate = true
check_untyped_defs = true
disallow_untyped_defs = false
disallow_incomplete_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
ignore_missing_imports = true
show_error_codes = true
show_column_numbers = true
pretty = true
plugins = []

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "yaml.*",
    "toml.*",
]
ignore_missing_imports = true

[tool.pyright]
pythonVersion = "3.9"
typeCheckingMode = "basic"
include = ["tools", "manifests", "targets", "spec"]
exclude = ["**/tests/**", "**/__pycache__/**", "**/node_modules/**", ".git"]
reportMissingImports = false
reportMissingTypeStubs = false
reportUnusedImport = true
reportUnusedVariable = true

# =============================================================================
# Security Configuration
# =============================================================================

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv", "build", "dist"]
skips = ["B101"]  # Skip assert_used
severity = "low"

# =============================================================================
# Coverage Configuration
# =============================================================================

[tool.coverage.run]
source = ["tools", "manifests", "targets", "spec"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/test_*",
    "*/_test.py",
    "*/conftest.py",
    "*/venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
fail_under = 80
show_missing = true
skip_empty = true

[tool.coverage.html]
directory = "coverage_html_report"
title = "STUNIR Python Coverage Report"

[tool.coverage.xml]
output = "coverage.xml"

# =============================================================================
# Mutation Testing Configuration (mutmut)
# =============================================================================

[tool.mutmut]
paths_to_mutate = "tools/,manifests/"
tests_dir = "tests/"
runner = "pytest"
backup = false
dict_synonyms = "Struct, NamedTuple"
simple_reporters = true

# =============================================================================
# Hypothesis Configuration
# =============================================================================

[tool.hypothesis]
settings = { max_examples = 100, deadline = 5000 }
