cabal-version:       3.0
name:                stunir-conformance-tests
version:             2.0.0.0
synopsis:            STUNIR Conformance Test Suite (Pure Haskell)
description:         Deterministic conformance testing for STUNIR in Python-averse environments.
                     Provides comprehensive verification of IR canonicalization, manifest generation,
                     receipt verification, and determinism guarantees.
                     Version 2.0 includes full Python test parity with 16 test suites and 68+ test cases.
license:             MIT
author:              STUNIR Authors
maintainer:          maintainer@example.com
category:            Testing
build-type:          Simple
extra-doc-files:     README.md
                   , PYTHON_TEST_MAPPING.md

common warnings
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates
                 -Wincomplete-uni-patterns -Wmissing-export-lists
                 -Wmissing-home-modules -Wpartial-fields
                 -Wredundant-constraints

common deps
    build-depends:    base >=4.14.0.0 && <5
                    , text >=1.2
                    , bytestring >=0.10
                    , aeson >=1.5
                    , aeson-pretty >=0.8
                    , containers >=0.6
                    , directory >=1.3
                    , filepath >=1.4
                    , cryptohash-sha256 >=0.11
                    , base16-bytestring >=1.0
                    , time >=1.9
                    , process >=1.6
                    , vector >=0.12
                    , mtl >=2.2
                    , transformers >=0.5
                    , deepseq >=1.4
                    , random >=1.1
    default-language: Haskell2010

library
    import:           warnings, deps
    exposed-modules:  Test.Harness
                    , Test.Determinism
                    , Test.Utils
                    , Test.Vectors
    hs-source-dirs:   src

test-suite stunir-conformance
    import:           warnings, deps
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    other-modules:    IRCanonTest
                    , ManifestGenTest
                    , ReceiptVerifyTest
                    , HashDeterminismTest
                    , TargetGenTest
                    , SchemaValidationTest
                    , ProvenanceTest
                    , ContractsVectorTest
                    , NativeVectorTest
                    , PolyglotVectorTest
                    , ReceiptsVectorTest
                    , EdgeCasesVectorTest
                    , PropertyVectorTest
                    , IRBundleTest
                    , PipelineIntegrationTest
                    , PerformanceTest
    hs-source-dirs:   tests
    build-depends:    stunir-conformance-tests
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N

executable run-conformance
    import:           warnings, deps
    main-is:          RunConformance.hs
    hs-source-dirs:   app
    build-depends:    stunir-conformance-tests
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
