cabal-version:      2.4
name:               stunir-semantic-ir
version:            1.0.0
synopsis:           STUNIR Semantic IR - Haskell Implementation
description:        Type-safe intermediate representation for STUNIR
license:            MIT
author:             STUNIR Team
maintainer:         stunir@example.com
category:           Language

library
    exposed-modules:
        STUNIR.SemanticIR.Types
        STUNIR.SemanticIR.Nodes
        STUNIR.SemanticIR.Expressions
        STUNIR.SemanticIR.Statements
        STUNIR.SemanticIR.Declarations
        STUNIR.SemanticIR.Modules
        STUNIR.SemanticIR.Validation
    
    build-depends:
        base >= 4.14 && < 5,
        aeson >= 2.0,
        text >= 1.2,
        containers >= 0.6
    
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall -O2
