cabal-version:      3.8
name:                stunir-haskell
version:             0.1.0.0
synopsis:            STUNIR Haskell Reference Pipeline

executable stunir-haskell
  main-is:             src/StunirPipeline.hs
  build-depends:       
      base ^>=4.18.0.0,
      aeson,
      bytestring,
      text,
      generic-deriving
  hs-source-dirs:      src
  default-language:    GHC2021
  ghc-options:         
      -Wall
      -O2
      -dynamic
      -threaded
      -funbox-strict-fields
