cabal-version:      3.8
name:                stunir-native
version:             0.1.0.0
synopsis:            STUNIR Native Haskell Pipeline

executable stunir-native
  main-is:             StunirNative.hs
  build-depends:       
      base ^>=4.18.0.0,
      aeson,
      bytestring,
      text,
      generic-deriving
  hs-source-dirs:      .
  default-language:    GHC2021
  ghc-options:         
    -Wall
    -O2
    -dynamic
    -threaded
