[package]
name = "stunir-semantic-ir"
version = "1.0.0"
authors = ["STUNIR Team"]
edition = "2021"
license = "MIT"
description = "STUNIR Semantic IR - Rust Implementation"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"

[lib]
name = "stunir_semantic_ir"
path = "src/lib.rs"
