cabal-version:       3.0
name:                stunir-native
version:             0.2.0.0
synopsis:            STUNIR Native Core (Haskell)
description:         Deterministic build tool and verifier for STUNIR
license:             MIT
author:              STUNIR Authors
maintainer:          maintainer@example.com
build-type:          Simple

common warnings
    ghc-options: -Wall

executable stunir-native
    import:           warnings
    main-is:          Main.hs
    other-modules:    Stunir.Canonical
                      Stunir.Receipt
                      Stunir.Spec
                      Stunir.IR
                      Stunir.Import
    build-depends:    base ^>=4.17.2.1,
                      text,
                      bytestring,
                      aeson >= 2.0,
                      containers,
                      directory,
                      filepath,
                      cryptohash-sha256,
                      base16-bytestring,
                      vector,
                      time
    hs-source-dirs:   src
    default-language: Haskell2010
