cabal-version:       3.0
name:                stunir-native
version:             0.5.0.0
synopsis:            STUNIR Native Core (Haskell)
description:
    Deterministic build tool and verifier for STUNIR.
    Provides canonical JSON generation, SHA-256 hashing,
    manifest generation, and provenance tracking.

license:             MIT
license-file:        LICENSE
author:              STUNIR Authors
maintainer:          maintainer@example.com
copyright:           2024-2026 STUNIR Authors
category:            Development
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC ==9.4.8, GHC ==9.6.4

source-repository head
    type:     git
    location: https://github.com/stunir/stunir.git

-- =============================================================================
-- Common configuration with strict warnings
-- =============================================================================

common warnings
    ghc-options:
        -Wall
        -Wcompat
        -Widentities
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wmissing-deriving-strategies
        -Wmissing-export-lists
        -Wmissing-home-modules
        -Wpartial-fields
        -Wredundant-constraints
        -Wunused-packages
        -fhide-source-paths

common coverage
    -- Enable HPC (Haskell Program Coverage) for testing
    ghc-options:
        -fhpc

common strict
    -- Strict type checking options
    ghc-options:
        -Werror=incomplete-patterns
        -Werror=missing-fields
        -Werror=missing-methods
    default-extensions:
        StrictData
        BangPatterns

-- =============================================================================
-- Main executable
-- =============================================================================

executable stunir-native
    import:           warnings, strict
    main-is:          Main.hs
    other-modules:    Stunir.Canonical
                      Stunir.Receipt
                      Stunir.Spec
                      Stunir.IR
                      Stunir.Import
                      Stunir.Provenance
                      Stunir.Toolchain
                      Stunir.Manifest
    build-depends:    base >=4.17.0.0 && <5,
                      text >=2.0,
                      bytestring >=0.11,
                      aeson >= 2.0 && <2.3,
                      aeson-pretty >=0.8,
                      containers >=0.6,
                      directory >=1.3,
                      filepath >=1.4,
                      cryptohash-sha256 >=0.11,
                      base16-bytestring >=1.0,
                      vector >=0.13,
                      time >=1.12,
                      process >=1.6
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions:
        OverloadedStrings
        DeriveGeneric
        DeriveAnyClass
        RecordWildCards
        TypeApplications

-- =============================================================================
-- Test suite
-- =============================================================================

test-suite stunir-native-test
    import:           warnings, coverage
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    other-modules:    Test.Canonical
                      Test.Receipt
                      Test.Manifest
    build-depends:    base >=4.17.0.0 && <5,
                      stunir-native,
                      hspec >=2.11,
                      QuickCheck >=2.14,
                      hspec-discover >=2.11,
                      aeson,
                      text,
                      bytestring
    hs-source-dirs:   test
    default-language: Haskell2010
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N

-- =============================================================================
-- Library (for test suite)
-- =============================================================================

library
    import:           warnings, strict
    exposed-modules:  Stunir.Canonical
                      Stunir.Receipt
                      Stunir.Spec
                      Stunir.IR
                      Stunir.Import
                      Stunir.Provenance
                      Stunir.Toolchain
                      Stunir.Manifest
    build-depends:    base >=4.17.0.0 && <5,
                      text >=2.0,
                      bytestring >=0.11,
                      aeson >= 2.0 && <2.3,
                      aeson-pretty >=0.8,
                      containers >=0.6,
                      directory >=1.3,
                      filepath >=1.4,
                      cryptohash-sha256 >=0.11,
                      base16-bytestring >=1.0,
                      vector >=0.13,
                      time >=1.12,
                      process >=1.6
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions:
        OverloadedStrings
        DeriveGeneric
        DeriveAnyClass
        RecordWildCards
        TypeApplications
