[package]
name = "stunir-native"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
ed25519-dalek = { version = "2", features = ["std"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
walkdir = "2"
