[package]
name = "stunir-native"
version = "0.1.0"
edition = "2021"
authors = ["STUNIR Team"]
description = "Native core for STUNIR deterministic build system"

[dependencies]
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
sha2 = "0.10"
hex = "0.4"
anyhow = "1.0"
walkdir = "2.4"
