[package]
name = "stunir-semantic-ir-emitters"
version = "1.0.0"
edition = "2021"
authors = ["STUNIR Team"]
license = "MIT"
description = "STUNIR Semantic IR Emitters - Rust Implementation"

[lib]
name = "stunir_emitters"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
thiserror = "1.0"
regex = "1.0"

[dev-dependencies]
tempfile = "3.0"
proptest = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "emitter_benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
