name:                stunir-native
version:             0.1.0.0
synopsis:            STUNIR Native Toolchain (Haskell Implementation)
license:             MIT
author:              STUNIR Team
maintainer:          maintainer@example.com
category:            Development
build-type:          Simple
cabal-version:       1.10

executable stunir-native
  main-is:             Main.hs
  other-modules:       Commands.SpecToIr
                     , Commands.GenProvenance
                     , Commands.CheckToolchain
                     , IR.V1
                     , IR.Provenance
  hs-source-dirs:      src
  build-depends:       base == 4.17.0.0
                     , aeson
                     , aeson-pretty
                     , text
                     , bytestring
                     , optparse-applicative
                     , cryptohash-sha256
                     , base16-bytestring
  default-language:    Haskell2010
